ios spacing fix

--- a/style.css
+++ b/style.css
@@ -65,6 +65,14 @@ img{
 
 }
 
+.debugLog{
+	position:absolute;
+	right:0;
+	top:0;
+	z-index:999;
+	color:white;
+}
+
 .container{
 	text-align:center;
 	width:100%;
@@ -164,6 +172,7 @@ img{
 	background-color:black;
 	z-index:10;
 	text-align:center;
+	margin-bottom:-70px;
 }
 
 .splash .container{
